--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -12,3 +12,28 @@
     margin: 1rem 0;
   }
 }
+
+.button {
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #ec95b1;
+}
+
+.button1:hover {
+  background-color: #ec95b1;
+  color: white;
+}
+
