--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -37,3 +37,15 @@
   color: white;
 }
 
+.button2 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #ec95b1;
+  padding: 4px 4px;
+  font-size: 12px;
+}
+
+.button2:hover {
+  background-color: #ec95b1;
+  color: white;
+}
